using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerController : MonoBehaviour
{
    public bool isFiring;
    public bool isReloading;
    public bool isInAir;
    public bool isRunning;
    public bool isAiming;

    [Header("Inventory")]
    public InventoryComponent inventory;
}
